# AgenticAIQAAutomation

./: main.py  pyproject.toml
agents/: automation_agent.py  locator_agent.py  testcase_agent.py
connectors/: confluence_connector.py  jira_connector.py
outputs/: generated_testcases.json  generated_testcases.xlsx
outputs/automation_steps/: TC001_automation_steps.json  TC002_automation_steps.json  TC003_automation_steps.json  TC004_automation_steps.json  TC005_automation_steps.json  TC006_automation_steps.json  TC007_automation_steps.json  TC012_automation_steps.json  TC013_automation_steps.json
outputs/locators/: TC001_locators.json
outputs/testcases/: generated_testcases.json  generated_testcases.xlsx
prompts/: appium_prompt.txt  locator_prompt.txt  selenium_prompt.txt
resources/screens/: login_screen_one.xml
tools/: xml_extractor.py
utils/: excel_exporter.py  json_exproter.py  prompt_loader.py  screencapture.py  test_xml_extractor.py  testcase_filter.py
workflows/: collect_app_screens.py  run_automation_workflow.py  run_locators_workflow.py  run_testcase_workflow.py
