[project]
name = "automation-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.30",
    "langchain-core>=0.3.86",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
